--- a/Design1/app/src/main/res/values/dimens.xml
+++ b/Design1/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <!-- Font size -->
     <dimen name="font_size_medium">16sp</dimen>
     <dimen name="font_size_big">18sp</dimen>
+    <dimen name="font_size_huge">1sp</dimen>
 
     <!-- Spacing -->
     <dimen name="spacing_medium">8dp</dimen>
