--- a/Design1/app/src/main/res/layout/fragment_order.xml
+++ b/Design1/app/src/main/res/layout/fragment_order.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<android.support.constraint.ConstraintLayout
+    android:id="@+id/main_container"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/product_order_form_height">
 
     <ImageView
         android:id="@+id/product_img"
@@ -71,19 +76,24 @@
             />
     </ViewSwitcher>
 
-    <Button
-        android:id="@+id/btn_submit"
+    <FrameLayout
+        android:id="@+id/btn_go"
         android:layout_width="160dp"
         android:layout_height="100dp"
         app:layout_constraintTop_toBottomOf="@id/switcher"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/spacing_big"
-        android:background="@color/product_purple"
-        android:textAlignment="center"
-        android:text="@string/go"
-        android:textColor="@color/white"
-        android:textSize="32sp"
-        android:textAllCaps="false"/>
+        android:background="@color/product_purple">
+        <TextView
+            android:id="@+id/text_go"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/go"
+            android:textColor="@color/white"
+            android:textSize="32sp"
+            android:textAllCaps="false"
+            android:layout_gravity="center"/>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/option1_holder"
@@ -93,7 +103,7 @@
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/blue_grey_700"
         android:textSize="@dimen/font_size_medium"
-        app:layout_constraintTop_toTopOf="@id/btn_submit"
+        app:layout_constraintTop_toTopOf="@id/btn_go"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/spacing_large"
         android:layout_marginTop="@dimen/spacing_big" />
@@ -106,9 +116,10 @@
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/blue_grey_700"
         android:textSize="@dimen/font_size_medium"
-        app:layout_constraintBottom_toBottomOf="@id/btn_submit"
+        app:layout_constraintBottom_toBottomOf="@id/btn_go"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/spacing_large"
         android:layout_marginBottom="@dimen/spacing_big"/>
 
 </android.support.constraint.ConstraintLayout>
+</FrameLayout>
