--- a/Instagram/app/src/main/res/layout/activity_comment.xml
+++ b/Instagram/app/src/main/res/layout/activity_comment.xml
@@ -32,13 +32,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent">
         <EditText
-            android:id="@+id/etComment"
+            android:id="@+id/edt_comment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#555555"
             android:textSize="14sp" />
         <com.example.android.myinstagram.widget.SendCommentButton
+            android:id="@+id/btn_send"
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
