--- a/Instagram/app/src/main/res/layout/activity_comment.xml
+++ b/Instagram/app/src/main/res/layout/activity_comment.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,12 +41,10 @@
             android:textSize="14sp" />
         <com.example.android.myinstagram.widget.SendCommentButton
             android:id="@+id/btn_send"
-            android:layout_width="72dp"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
             android:layout_margin="3dp"
-            android:text="Send"
-            android:textColor="#ffffff"
-            android:background="@drawable/btn_send_comment" />
+            style="@style/AppTheme.SendButton" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
